--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
 #  screen_text_extractor: ^0.1.1
   sqflite_common_ffi:
+  #文件操作
   path_provider:
   sqflite:
   async:
@@ -43,6 +44,7 @@ dependencies:
   fluttertoast:
   #右键上下文
   contextual_menu:
+
   flutter:
     sdk: flutter
 
